[package]
name = "n_pmx_viewer"
version = "0.1.0"
edition = "2018"
description ="A new pmx viewer with customizable shaders"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
resolver ="2"

[dependencies]
egui = "0.16.0"
epi = "0.16.0"
egui_wgpu_backend = "0.16.0"
egui-winit = {version="0.16.0",features=["epi"]}
PMXUtil ="0.6.1"
pollster ="0.2.4"